--- a/算法.md
+++ b/算法.md
@@ -35,6 +35,37 @@
      
 
 2. DFS（深度优先遍历算法）
+
 3. 获取两个数组的交集
+
 4. 查找数组中出现两次的元素
+
 5. 将两个有序的数组合并成一个有序的数组
+
+6. 求两数之和
+
+   - php实现
+
+   ```php
+   /**
+    * 求两数之和的键
+    * 时间复杂度 O(n)
+    */
+   function getKeysByNum($arr, $num) {
+       $set = array(); // 准备一个集合
+   
+       foreach ($arr as $key=>$value) {
+           $tmp = $num - $value; // 找出和他配对的值
+           if(isset($set[$tmp])) {
+               return array($key, $set[$tmp]); // 存在的话返回
+           } else {
+               $set[$value] = $key; // 不存在的话就登记
+           }
+       }
+   
+       return false;
+   }
+   ```
+
+   
+
