算法、数据结构

--- a/架构.md
+++ b/架构.md
@@ -20,7 +20,7 @@
 
      [一口气说出 9种 分布式ID生成方式](https://zhuanlan.zhihu.com/p/107420326)
 
-2. 如何做系统优化
+2. 如何做web系统的优化
 
    [高并发大流量的处理方式](https://note.youdao.com/s/MIlFbEiJ)
 
@@ -82,8 +82,14 @@
        减少计算
 
        json编码的前置
+       
+       
 
 5. php-连接池的实现
+
+   - 使用的意义
+
+     帮助webserver快速的响应数据，其实也是提高性能的方式
 
    - 连接池的定义
 
@@ -102,7 +108,10 @@
      阿里云的RDS
 
      php + SQL Relay + mysql
-
+   
      参考：[数据库连接池的实现](https://blog.csdn.net/u014559227/article/details/88343263)
-
+   
      
+
+6. 缓冲队列的实现
+   - Redis sortSet
